[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*", "test*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"
write_to = "robot_hat/version.py"

[project]
name = "robot_hat"
description = "Extensible and type-hinted library for controlling robot hardware (motors, servos, ultrasonic, ADC, I2C)."
readme = { file = "README.md", content-type = "text/markdown" }
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Karim Aziiev", email = "karim.aziiev@gmail.com" }
]
dependencies = [
    "pygame",
    "smbus2",
    "gpiozero",
    "RPi.GPIO; sys_platform == 'linux' and (platform_machine == 'armv6l' or platform_machine == 'armv7l' or platform_machine == 'aarch64')",
    "tenacity",
]
keywords = ["i2c", "raspberrypi"]
dynamic = ["version"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["robot_hat/version.py"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "E731", "E402"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]
